<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">
    
    <FrameLayout android:id="@+id/rent_list_img_panel"
        android:layout_width="120dp"
	    android:layout_height="90dp"
	    android:layout_gravity="top|left"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp">
    
		<ImageView android:id="@+id/rent_list_item_img" 
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_gravity="top|left"
		    android:src="@drawable/rent_list_item_img"
		    android:contentDescription="@string/rent_default_img_desc"/>
		
		<TextView android:id="@+id/rent_list_item_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top|left"
	        android:background="@color/burgundi"
	        android:paddingLeft="3dp"
	        android:paddingRight="3dp"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="@color/white"
	        android:text="@string/rent_date_default_text">
		</TextView>
	</FrameLayout>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/rent_list_img_panel"
	    android:layout_marginRight="10dp"
	    android:orientation="vertical">
	    
	    <TextView android:id="@+id/rent_list_item_price"
	        style="@style/RentListItemTextViewStyle"
	        android:gravity="left"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/blue"
	        android:textStyle="bold"
	        android:text="@string/rent_price_default_text">
		</TextView>
		
		<TextView android:id="@+id/rent_list_item_address"
	        style="@style/RentListItemTextViewStyle"
	        android:layout_marginTop="5dp"
	        android:text="@string/rent_street_default_text">
		</TextView>
		
		<TextView android:id="@+id/rent_list_item_specs"
			style="@style/RentListItemTextViewStyle"
	        android:text="@string/rent_short_desc_default_text">
		</TextView>
		
		<TextView android:id="@+id/rent_list_item_type_desc"
		    style="@style/RentListItemTextViewStyle"
	        android:text="@string/rent_type_default_text">
		</TextView>
	</LinearLayout>
	
</RelativeLayout>
